--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BleLocker</string>
+    <string name="SplashActivity__Title">BleLocker</string>
+
+    <string name="Scanner__Text__Notice">바이크 뒷바퀴측에 부착된 QR코드를\n아래 포커스에 맞춰 스캔하세요.\n잠금장치가 풀리면 이용이 시작됩니다.</string>
 </resources>
